--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "sema",
-  "module": "index.ts",
+  "name": "semos",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "astro": "^5.17.2"
   }
 }
