--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "typescript": "^5"
   },
   "dependencies": {
-    "astro": "^5.17.2"
+    "@astrojs/starlight": "^0.37.6",
+    "astro": "^5.17.2",
+    "starlight-typedoc": "^0.21.5",
+    "typedoc": "^0.28.16",
+    "typedoc-plugin-markdown": "^4.10.0"
   }
 }
