--- a/.github/workflows/receive-docs.yml
+++ b/.github/workflows/receive-docs.yml
@@ -4,6 +4,10 @@ on:
   repository_dispatch:
     types: [docs-update]
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   update-docs:
     runs-on: ubuntu-latest
