--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "build": "astro build",
+    "generate:og": "bun run scripts/generate-og.ts",
+    "build": "bun run generate:og && astro build",
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "gray-matter": "^4.0.3"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -17,6 +19,8 @@
     "@astrojs/starlight": "^0.37.6",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.17.2",
+    "satori": "^0.19.2",
+    "sharp": "^0.34.5",
     "starlight-typedoc": "^0.21.5",
     "tailwindcss": "^4.1.18",
     "typedoc": "^0.28.16",
