Image optimizer, new blog post draft

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 
 # generated OG images
 public/og/
+
+# image optimization manifest
+public/images/.optimize-manifest.json
