--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "astro dev",
     "generate:og": "bun run scripts/generate-og.ts",
     "generate:og:force": "bun run scripts/generate-og.ts --force",
-    "build": "bun run generate:og && astro build",
+    "optimize:images": "bun run scripts/optimize-images.ts",
+    "optimize:images:force": "bun run scripts/optimize-images.ts --force",
+    "build": "bun run optimize:images && bun run generate:og && astro build",
     "preview": "astro preview",
     "newsletter:preview": "bun run scripts/send-newsletter.ts --preview",
     "newsletter:test": "bun run scripts/send-newsletter.ts --test",
